UserInterface: apply build.prop edit to fully remove bootanimation
Also move backup/restoring bootanimations off the UI thread

Patch Set 2: fix whitespace derpage
           : fix typo in sed command

Patch Set 3: add insult_unicorns
Patch Set 4: include missing R.string.insult_unicorns ;)
Patch Set 5: provide better AsyncTask implentation
           : we now have a Async SU CMDProcessor
           : include a simple reusable Pair object
Patch Set 6: fix reapplying bootanimation
Change-Id: I02261ebb23d798746240b99ff588650117b966b6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -725,6 +725,7 @@
     <!-- boot animation stuff -->
     <string name="insult_jerk">Jerk!</string>
     <string name="insult_protekk">ProTekk!</string>
+    <string name="insult_unicorns">Concede pink unicorns are for little girls</string>
 
     <!-- clock stuff -->
     <string name="right_clock">Right clock</string>
